--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ main{
     font-size: 18px;
     
 }
-.player img{
+ img{
     height: 56px;
     width: 56px;
 }
@@ -115,6 +115,9 @@ main{
 hr{
     border: 1px solid #D1D1D1;
     margin-bottom: 27px;
+}
+.fff{
+    /* width: 50000px; */
 }
 
 
